--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#connection details
+*_db.txt
+
 # Logs
 logs
 *.log
@@ -31,7 +34,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-
+build/
 # Dependency directories
 node_modules/
 jspm_packages/
