--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "urm",
-  "version": "0.0.0",
+  "version": "0.0.01",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "server-debug": "nodemon --inspect ./bin/www",
+    "start:dev": "concurrently \"npm:client-debug\" \"npm:tsc-w \" \" nodemon --inspect build/urm-server/server.js \" ",
+    "start": "npm run build && node build/index.js",
+    "build": "rimraf ./build && tsc",
+    "server-debug": "tsc && run-p tsc-w server-reload",
     "client-debug": "npm start --prefix urm-client",
-    "debug": "npm-run-all --parallel client-debug server-debug"
+    "client-build": "npm run build --prefix urm-client",
+    "debug": "npm-run-all --parallel client-debug server-debug",
+    "tsc-w": "tsc -w"
   },
   "dependencies": {
     "concurrently": "^5.3.0",
@@ -20,6 +24,14 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.9",
+    "@types/node": "^14.14.9",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.2"
   }
 }
