--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
+    "lib": ["es6"],
     "sourceMap": true,
-    "allowJs": true
+    "allowJs": true,
+    "rootDir": "",
+    "outDir": "./build",
+//    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+//    "noImplicitAny": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "build",
+    "urm-client"
   ]
 }
