--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "tsc-w": "tsc -w"
   },
   "dependencies": {
+    "@types/express-jwt": "0.0.42",
+    "@types/jsonwebtoken": "^8.5.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "sybase": "^1.2.1",
     "xml2js": "^0.4.23"
